# ldp

./: .gitignore  ADMIN_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Doxyfile  Jenkinsfile  Jenkinsfile.folio  README.md  USER_GUIDE.md  all.sh  config_example.json  debug.sh  docker-entrypoint.sh  prof.sh  version.sh
.github/workflows/: build-ldp.yml  ccpp.yml  release-ldp.yml
cmake/: RapidJSONConfig.cmake
doc/: Admin_Guide.md  Config_Guide.md  Database_Tools_Compatibility.md  User_Guide.md
etymoncpp/: README.md
etymoncpp/include/: curl.h  mallocptr.h  odbc.h  postgres.h  sqlite3.h  util.h
etymoncpp/src/: curl.cpp  mallocptr.cpp  odbc.cpp  postgres.cpp  sqlite3.cpp  util.cpp
examples/: ldpconf.json  ldpconfig.json  odbc.ini  odbcinst.ini
src/: CMakeLists.txt  Doxyfile  addcolumns.cpp  addcolumns.h  anonymize.cpp  anonymize.h  camelcase.cpp  camelcase.h  camelcase_test.cpp  config.cpp  config.h  config_json.cpp  config_json.h  dbcontext.cpp  dbcontext.h  dbtype.cpp  dbtype.h  dbup1.cpp  dbup1.h  dropfields.cpp  dropfields.h  extract.cpp  extract.h  idmap.cpp  idmap.h  init.cpp  init.h  initutil.cpp  initutil.h  ldp.cpp  ldp.h  log.cpp  log.h  main.cpp  main_itest.cpp  merge.cpp  merge.h  names.cpp  names.h  options.cpp  (+20 more)
src/itest/: main_itest.cpp  server_itest.cpp
src/test/: camelcase_test.cpp
test/: camelcase_test.cpp  test.h
test_int/: main_test_int.cpp  server_test_int.cpp
testint/: main_testint.cpp  server_testint.cpp
